linted; reordering; auto-select nae field in collection modal
