# src/assets/swagger.yaml
@@ -247,6 +247,37 @@ paths:
             type:                  "string"
         405:
           description:             "Invalid input"
+  /exercises/{id}/reorder:
+    post:
+      tags:
+      - "Editor"
+      description:                 "Reorders an exercise."
+      operationId:                 "exercisesIdReorderPOST"
+      produces:
+      - "application/json"
+      parameters:
+      - name:                      "id"
+        in:                        "path"
+        description:               "ID of exercise"
+        required:                  true
+        type:                      "integer"
+        format:                    "int32"
+      - in:                        "body"
+        name:                      "body"
+        description:               "List of ordered page IDs"
+        required:                  true
+        schema:
+          type:                    "array"
+          items:
+            type:                  "integer"
+            format:                "int32"
+      responses:
+        200:
+          description:             "OK"
+          schema:
+            type:                  "string"
+        405:
+          description:             "Invalid input"
       x-swagger-router-controller: "Editor"
   /lessons:
     get:
@@ -353,6 +384,38 @@ paths:
         required:                  true
         type:                      "integer"
         format:                    "int32"
+      responses:
+        200:
+          description:             "OK"
+          schema:
+            type:                  "string"
+        405:
+          description:             "Invalid input"
+      x-swagger-router-controller: "Editor"
+  /lessons/{id}/reorder:
+    post:
+      tags:
+      - "Editor"
+      description:                 "Reorders a lesson."
+      operationId:                 "lessonsIdReorderPOST"
+      produces:
+      - "application/json"
+      parameters:
+      - name:                      "id"
+        in:                        "path"
+        description:               "ID of lesson"
+        required:                  true
+        type:                      "integer"
+        format:                    "int32"
+      - in:                        "body"
+        name:                      "body"
+        description:               "List of ordered exercise IDs"
+        required:                  true
+        schema:
+          type:                    "array"
+          items:
+            type:                  "integer"
+            format:                "int32"
       responses:
         200:
           description:             "OK"
